--- a/app/views/users/teachers/show.html.erb
+++ b/app/views/users/teachers/show.html.erb
@@ -1,6 +1,8 @@
+<h1>YOU SHOULDN'T BE HERE</h1>
+
 <p>
-  <b>Short name:</b>
-  <%=h @teacher.short_name %>
+  <b>Login:</b>
+  <%=h @teacher.login %>
 </p>
 
 <p>
