--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -2,27 +2,27 @@
 <div class='box'>
 	<% form_for user do |f| %>
 			<div class="spacer">
-			<%= content_tag( :h1, "Editing: #{user.full_name}" ) %>
+  			<%= content_tag( :h1, "Editing: #{user.full_name}" ) %>
 			</div>
 			
-			<label><span>ID</span>
-			<%= f.text_field :short_name, :class=>'input-text'  %>
+			<label><span>Login</span>
+  			<%= f.text_field :login, :id => 'user_login' %>
 			</label>
 		
 			<label><span class='required'>First Name</span>
-			<%= f.text_field :first_name, :class=>'input-text'  %>
+  			<%= f.text_field :first_name %>
 			</label>
 
 			<label><span class='required'>Last Name</span>
-			<%= f.text_field :last_name, :class=>'input-text'  %>
+  			<%= f.text_field :last_name %>
 			</label>
 			
 			<label><span>Email Address</span>
-			<%= f.text_field :email, :class=>'input-text' %><br>
+  			<%= f.text_field :email %>
 			</label>
 
 			<label><span class='required'>Site</span>
-			<%= collection_select user.class.name.underscore, :site_id, Site.find(:all), :id, :name %>
+  			<%= collection_select user.class.name.underscore, :site_id, Site.find(:all), :id, :name %>
 			</label>
 
 			<% if user.class.name == 'Student' %>
@@ -43,4 +43,4 @@
 	<% end %>
 </div>
 
-<%= set_focus_to_id 'student_short_name' %>
+<%= set_focus_to_id 'user_login' %>
