--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -55,7 +55,7 @@ If you find something interesting, please <a href='mailto:gradesheet@kangaroobox
   </dt>
 </div>
 
-<div class='clear'>
+<div class='clear'>&nbsp;</div>
 
 <address>
 Thank you!<br />
