minor CSS changes to better handle the IE line of browsers

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,11 +10,13 @@
 
 <h2>Welcome to <%= SITE_NAME %>!</h2>
 
-<p class='warning last'>This is a pre-Beta version of the <%= SITE_NAME %> software.  All of the data here is
+<div class='warning box last' style='padding: 5px;'>
+This is a pre-Beta version of the <%= SITE_NAME %> software.  All of the data here is
 generated and most of it is nonsensical.  However, it is a starting point and 
 should give you enough 'things' to be able to exercise the program a little bit.
 Please, take a look around and push all the buttons.  You can't hurt anything here.
-If you find something interesting, please <a href='mailto:gradesheet@kangaroobox.com'>let us know about it</a>.</p>
+If you find something interesting, please <a href='mailto:gradesheet@kangaroobox.com'>let us know about it</a>.
+</div>
 
 <h3>Latest News - Mar. 23, 2009</h3>
 <ul>
@@ -25,34 +27,39 @@ If you find something interesting, please <a href='mailto:gradesheet@kangaroobox
 </ul>
 
 <div class='box span-5'>
-  <dt>Site Administrator<dd><ul>
+  Site Administrator
+  <ul>
     <li>Username: <em>admin</em></li>
-    <li>Password: <em>admin</em></li></ul></dd>
-  </dt>
+    <li>Password: <em>admin</em></li>
+  </ul>
 </div>
 
 <div class='box span-5'>
-  <dt>Teacher A<dd><ul>
+  Teacher A
+  <ul>
     <li>Username: <em>teachera</em></li>
-    <li>Password: <em>teachera</em></li></ul></dd>
-  </dt>
+    <li>Password: <em>teachera</em></li>
+  </ul>
   <hr />
-  <dt>Teacher B<dd><ul>
+  Teacher B
+  <ul>
     <li>Username: <em>teacherb</em></li>
-    <li>Password: <em>teacherb</em></li></ul></dd>
-  </dt>
+    <li>Password: <em>teacherb</em></li>
+  </ul>
 </div>
 
 <div class='box span-5 last'>
-  <dt>Student A<dd><ul>
+  Student A
+  <ul>
     <li>Username: <em>studenta</em></li>
-    <li>Password: <em>studenta</em></li></ul></dd>
-  </dt>
+    <li>Password: <em>studenta</em></li>
+  </ul>
   <hr />
-  <dt>Student B<dd><ul>
+  Student B
+  <ul>
     <li>Username: <em>studentb</em></li>
-    <li>Password: <em>studentb</em></li></ul></dd>
-  </dt>
+    <li>Password: <em>studentb</em></li>
+  </ul>
 </div>
 
 <div class='clear'>&nbsp;</div>
