--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 <body>
 
 <div class='container showgri'>
-	<div id='header' class='span-20'>
+	<div id='header' class='span-25 last'>
 
 		<div class='span-3'><img class='top' src='/images/logo.png' width='60px' height='60px'></div>
 		
@@ -31,7 +31,7 @@
 			<span class='tagline column span-6'><%= TAG_LINE %></span>
 		</div>
 		
-    <div id='header-top-right'>				
+    <div id='account-info' class='span-7 push-8 last'>
 		  <% if !current_user %>
 		    <span>Welcome</span> | 
 		    <span><%= link_to " log in ", new_user_session_path %></span>
@@ -43,7 +43,7 @@
   		<% end %>
 		</div>
 
-		<div class='span-20 last'>
+		<div class='span-23'>
 			<%= menu_builder(request.path_parameters['controller'].split('/')[0]) %>
 		</div>
 	</div>
