--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -6,13 +6,14 @@ body {background: #FFF url("/images/header-bg.gif") top left repeat-x;}
 #header .login a {color: #FF0;}
 #flash {text-align: center;}
 #footer {margin: auto;padding-top: 20px;text-align: center;font-size: 0.8em;}
-#header-top-right {
+#account-info {
   -moz-border-radius-bottomleft: 7px;
+  -moz-border-radius-bottomright: 7px;
   -webkit-border-bottom-left-radius: 7px;
+  -webkit-border-bottom-right-radius: 7px;
   background-color:#EFF7FF;
   padding:4px;
-  position:absolute;
-  right:0;
+  text-align: center;
 }
 .container .error, .container .notice, .container .warning {padding:0em;margin-bottom:1.1em;border:2px solid #ddd;}
 .container .error {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
@@ -22,7 +23,7 @@ body {background: #FFF url("/images/header-bg.gif") top left repeat-x;}
 .container .warning a {color:#514721; background:none; padding:0; margin:0; }
 .container .notice a {color:#264409; background:none; padding:0; margin:0; }
 
-div.box {	border: 2px solid #D2DDFE; padding: 0.5em; }
+div.box {	border: 2px solid #D2DDFE; padding: 0.5em; -moz-border-radius: 7px; -webkit-border-radius: 7px; }
 h3 {border-bottom: 1px solid #DDD;}
 
 /*** Tables ***/
