--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -4,7 +4,7 @@
 
 <%= error_messages_for :course, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
-<div class='box span-12 last'>
+<div class='box span-12'>
 	<% form_for( @course, :url => {}, :html => {:id => 'edit_course'} ) do |f| %>
 		<label><span class='required'>Name</span>
 			<%= f.text_field :name %>
@@ -30,7 +30,7 @@
 	<%= observe_form :edit_course, :url => {:action => :update} %>
 </div>
 
-<div class='span-10'></div>
+<div class='append-7 last'>&nbsp;</div>
 
 <div class='span-3'>
 	<form id='class_of_form'>
