--- a/app/views/settings/sites/edit.html.erb
+++ b/app/views/settings/sites/edit.html.erb
@@ -4,7 +4,7 @@
 
 <%= error_messages_for "site" %>
 
-<div class='box'>
+<div class='box span-13'>
 <% form_for @site do |f| %>
 	<label><span class='required'>Location Name</span>
 		<%= f.text_field :name %>
