--- a/app/views/settings/terms/edit.html.erb
+++ b/app/views/settings/terms/edit.html.erb
@@ -4,7 +4,7 @@
 
 <%= error_messages_for "term" %>
 
-<div class='box'>
+<div class='box span-13'>
 <% form_for @term do |f| %>
 	<label><span class='required'>School Year</span>
 		<%= f.text_field :school_year %>
