--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -1,8 +1,8 @@
 <%# FIXME - This should be merged with _new.html.erb %>
-<div class='box'>
+<div class='box span-13'>
 	<% form_for user do |f| %>
 			<div class="spacer">
-  			<%= content_tag( :h1, "Editing: #{user.full_name}" ) %>
+  			<%= content_tag( :h2, "Editing: #{user.full_name}" ) %>
 			</div>
 			
 			<label><span>Login</span>
