--- a/app/views/settings/grading_scales/edit.html.erb
+++ b/app/views/settings/grading_scales/edit.html.erb
@@ -4,7 +4,7 @@
 
 <%= error_messages_for :scale, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
-<div class='box'>
+<div class='box span-13'>
 <% form_for @scale do |f| %>
 	<label><span class='required'>Scale Name</span>
 		<%= f.text_field :name %>
