--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -1,8 +1,9 @@
 <% items = [
+		{:name => 'Assignment Types', :url => '/settings/assignment_categories'},
+		{:name => 'Campus Info', :url => '/settings/sites'},
+		{:name => 'Import Data', :url => '/settings/imports'},
 		{:name => 'Grading Periods', :url => '/settings/terms'},
-		{:name => 'Grading Scales', :url => '/settings/grading_scales'},
-		{:name => 'Campuses', :url => '/settings/sites'},
-		{:name => 'Assignment Types', :url => '/settings/assignment_categories'}]#,
+		{:name => 'Grading Scales', :url => '/settings/grading_scales'}]#,
 #		{:name => 'School Calendar', :url => '/settings/events'}]
 %>
 		
