Imports have been tweaked to work much better and are almost complete. I have seen the RDoc light and am starting to create/modify documentation in earnest.

--- a/app/views/settings/imports/index.html.erb
+++ b/app/views/settings/imports/index.html.erb
@@ -6,32 +6,42 @@
     :header_message => "The following records did not pass validation:", 
     :message => 'Please correct these problems and try again' %>
 
-<h2>Import Users</h2>
+<div class='span-13 last'><h2>Import User Data</h2></div>
 
-<div class='box span-12 last'>
-  <% form_for :dump, :url => { :action => :create }, :html => { :multipart => true } do |f| -%>
-    <table">
-     <tr>
-       <td><label for="dump_file">Select a STUDENT CSV File :</label></td>
-       <td ><%= f.file_field :file -%></td>
-     </tr>
-     <tr>
-       <td colspan='2'><%= submit_tag 'Submit', :confirm => "Importing new STUDENT data.  Click OK to continue." -%></td>
-     </tr>
-    </table>
+<div class='box span-13 prepend-5 last'>
+  <% form_for :import, :url => { :action => :create }, :html => { :multipart => true } do |f| -%>
+    <div class='label'>Import Student data using this format:<br />
+    <span class='example'>("Login ID","First Name","Last Name","Email Address", Class Of, "Homeroom", "Campus")</span></div>
+    <input type='hidden' name='import_type' value='students' />
+    <%= f.file_field :file -%>
+
+    <%= submit_tag 'Import', :class => 'btn standard',
+          :confirm => "This will import new STUDENT\ninformation into the system.\n\nClick OK to continue." -%>
+  <% end -%>
+
+  <div class='spacer'>&nbsp;</div>
+  
+  <% form_for :import, :url => { :action => :create }, :html => { :multipart => true } do |f| -%>
+    <div class='label'>Import Teacher data using this format:<br />
+    <span class='example'>("Login ID","First Name","Last Name","Email Address", "Campus")</span></div>
+    <input type='hidden' name='import_type' value='teachers' />
+    <%= f.file_field :file -%>
+
+    <%= submit_tag 'Import', :class => 'btn standard',
+          :confirm => "This will import new TEACHER\ninformation into the system.\n\nClick OK to continue." -%>
   <% end -%>
 </div>
 
-<div class='box span-12 last'>
-  <% form_for :dump, :url => { :path => :students_imports }, :html => { :multipart => true } do |f| -%>
-    <table">
-     <tr>
-       <td><label for="dump_file">Select a TEACHER CSV File :</label></td>
-       <td ><%= f.file_field :file -%></td>
-     </tr>
-     <tr>
-       <td colspan='2'><%= submit_tag 'Submit' -%></td>
-     </tr>
-    </table>
+<div class='span-13 last'><h2>Import Other Data</h2></div>
+
+<div class='box span-13 last'>
+  <% form_for :import, :url => { :action => :create }, :html => { :multipart => true } do |f| -%>
+    <div class='label'>Import Other data using this format:<br />
+    <span class='example'>("Field 1","Field 2","Field 3")</span></div>
+    <input type='hidden' name='import_type' value='other' />
+    <%= f.file_field :file -%>
+
+    <%= submit_tag 'Import', :class => 'btn standard',
+          :confirm => "This will import new \ninformation into the system.\n\nClick OK to continue." -%>
   <% end -%>
 </div>
