--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <%= stylesheet_link_tag 'local' -%>
 
   <%= javascript_include_tag :defaults -%>
+  <%= javascript_include_tag 'livepipe' -%>
+  <%= javascript_include_tag 'tabs' -%>
   <%#= javascript_include_tag 'tablekit' -%>
 
   <%= @content_for_page_header -%>
