--- a/app/views/gradations/_grades.html.erb
+++ b/app/views/gradations/_grades.html.erb
@@ -1,4 +1,3 @@
-
 <%# Sort the assignments by due date. %>
 <% unsorted_assignments = Array.new %>
 <% for assignment in @gradations.assignments %>
@@ -81,6 +80,11 @@
 				    </td>
 				    <% a_counter += number_of_students %>
 				  <% end %>
+    
+          <%# Clean up the HTML if no assignments are found in the DB %>
+          <% if assignments.length < 1 then -%>
+            <td class='grades'>&nbsp;</td>
+          <% end -%>
 				  
 				</tr>
 			  <% counter += 1 %>
