working on computing grades

--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -1,7 +1,7 @@
 <div id='course_list'>
 	<table id='courses' class='master'>
 		<thead>
-		  <th>Name <%= "(#{@courses.length})" unless @courses.blank? %></th>
+		  <th>Course <%= "(#{@courses.length})" unless @courses.blank? %></th>
 		  <th>Term</th>
 		</thead>
 		<tbody>
