--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -7,7 +7,7 @@
 #		{:name => 'School Calendar', :url => '/settings/events'}]
 %>
 		
-<table>
+<table class='master'>
 	<thead>
 		<th>Settings</th>
 	</thead>
